# rcomp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: Bwt_Naive.hpp  FData_Naive.hpp  FIndex.hpp  GroupedFData_Naive.hpp  GroupedFData_Serialized.hpp  GroupedFIndex.hpp  GroupedLData_Naive.hpp  GroupedLData_Serialized.hpp  GroupedLData_UnitTraits.hpp  GroupedLFIntervalGraph.hpp  GroupedLIndex.hpp  LData_Naive.hpp  LFIntervalGraph.hpp  LIndex.hpp  LinkedList.hpp  Rindex_GLFIG.hpp  Rindex_Interface.hpp  Rindex_LFIG.hpp  Rlbwt_GLFIG.hpp  Rlbwt_Interface.hpp  Rlbwt_LFIG.hpp  StaticQueue.hpp  StaticVector.hpp  Successor.hpp  TextLoader.hpp  Timer.hpp  abort_if.hpp  basics.hpp  defs.hpp  intrinsics.hpp  io.hpp  rindex_types.hpp  rlbwt_types.hpp  utils.hpp
perf/: CMakeLists.txt  perf_rindex.cpp  perf_rlbwt.cpp
sample/: CMakeLists.txt  sample_rindex.cpp  sample_rlbwt.cpp
src/: CMakeLists.txt  Compressor_GroupLFIG.hpp  Compressor_LFIG.hpp  Compressor_Naive.hpp  FData_Naive.hpp  FIndex.hpp  GroupFData_Naive.hpp  GroupFData_Serialized.hpp  GroupFIndex.hpp  GroupLData_Naive.hpp  GroupLData_Serialized.hpp  GroupLIndex.hpp  LData_Naive.hpp  LIndex.hpp  LinkedList.hpp  StaticQueue.hpp  StaticVector.hpp  TextLoader.hpp  Timer.hpp  abort_if.hpp  basics.hpp  compressors.hpp  defs.hpp  intrinsics.hpp  perf_rlbwt.cpp  test_rlbwt.cpp  utils.hpp
test/: CMakeLists.txt  test_common.hpp  test_rindex.cpp  test_rlbwt.cpp
tool/: CMakeLists.txt  demo_rindex.cpp  transform.cpp
